Name:           iterIO
Version:        0.0
Cabal-Version:  >= 1.2
build-type:     Simple
License:        BSD3
License-File:   LICENSE
Author:         David Mazieres
Stability:      experimental
Maintainer:     http://www.scs.stanford.edu/~dm/addr/
Category:       System, Data
Synopsis:       Iteratee-based IO with simple pipe operators
Extra-source-files:
        Examples/fgrep.hs
Description:

        Iteratee-based IO is an alternative to lazy IO that offers
        referential transparency and convenient composition of
        protocol layers or parsers.  The approach was originally
        advocated by Oleg Kiselyov (see talk slides here
        <http://okmij.org/ftp/Streams.html#iteratee>).  The original
        implementation by Kiselyov and John W. Lato was simply called
        /iteratee/ (<http://hackage.haskell.org/package/iteratee>).
        This package is a complete re-write of iteratee from scratch,
        in an effort to simplify many of the abstractions and make
        them easier to use.

Library
  Build-Depends: base >= 4 && < 5,
                 bytestring >= 0.9 && < 1.0,
                 mtl >= 1.1.0.2 && < 2,
                 network >= 2.2 && < 3.0,
                 ListLike >= 1.0 && < 2.0
  Exposed-modules:
    Data.IterIO, Data.IterIO.Base, Data.IterIO.ListLike,
    Data.IterIO.Extra
  Extensions:
    ForeignFunctionInterface, FlexibleInstances
